<resources>
    <string name="app_name">Just Music</string>
    <string name="title_home">Home</string>
    <string name="no_internet_description">Please check your internet connection</string>
    <string name="message_back_button">Please click BACK again to exit</string>
    <string name="something_went_wrong">Something went wrong, please try again</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">My Favorites</string>
    <string name="top_albums">Top Albums</string>
    <string name="view_all">View All</string>
    <string name="top_songs">Top Songs</string>
    <string name="retry">Retry</string>
    <string name="no_internet">No Internet connection. Make sure Wi-Fi or cellular data is turned on, then try again.</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="no_favorites_albums">No favorite albums available</string>
    <string name="music_quotes_a">\"Music is the literature of the heart; it commences where speech ends.\"\n\n\n--- Alphonse de Lamartine ---</string>
    <string name="no_favorites_songs">No favorite songs available</string>
    <string name="music_quotes_b">\"Music is your own experience, your thoughts, your wisdom. If you don’t live it, it won’t come out of your horn.\"\n\n\n--- Charlie Parker ---</string>
    <string name="add_album_my_favorite">Add Album as My Favorites</string>
    <string name="remove_album_my_favorite">Remove Album From My Favorites</string>
    <string name="add_song_my_favorite">Add Song as My Favorites</string>
    <string name="remove_song_my_favorite">Remove Song From My Favorites</string>
    <string name="added_as_favorite">added in My Favorites</string>
    <string name="removed_as_favorite">removed from My Favorites</string>
    <string name="no_results">No results</string>
    <string name="no_songs_found">No songs found</string>
    <string name="no_albums_found">No albums found</string>
    <string name="recent_searches">Recent searches</string>
    <string name="clear_all">Clear all</string>
    <string name="search_song_album">Search album, song</string>
    <string name="speech_prompt_message">Search your album or song</string>
    <string name="voice_search_not_supported">Voice search is not supported to your device</string>
    <string name="filter_not_apply_empty_list">Filter can\'t apply on empty list</string>
    <string name="any_time">Any time</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="released_timeline">Released\nTimeline</string>
    <string name="by_artist">By Artist</string>
    <string name="by_category">By Category</string>
    <string name="search_song_default_message">Search Song what you love, like and enjoy</string>
    <string name="search_album_default_message">Search Album what you love, like and enjoy</string>
    <string name="advance_search">Advance Search</string>

    <array name="release_date_types">
        <item>@string/any_time</item>
        <item>@string/this_week</item>
        <item>@string/this_month</item>
        <item>@string/this_year</item>
    </array>
    <!-- Broadcast Receivers -->
    <string name="broadcast_seekbar_update">broadcast_seekbar_update</string>
    <string name="broadcast_seekbar_value">broadcast_seekbar_value</string>
    <string name="broadcast_update_ui">broadcast_update_ui</string>
    <string name="broadcast_new_media_id">broadcast_new_media_id</string>

    <string name="string_remove_from_playlist">Remove from playlist?</string>
    <string name="string_yes">yes</string>
    <string name="string_no">no</string>
    <string name="label_stop">Stop</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_play_pause">Play and pause toggle</string>
    <string name="label_previous">Previous track</string>
    <string name="label_next">Next track</string>



    <string name="categories">Categories</string>
</resources>
