<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/_10sdp"
    android:id="@+id/clHeaderTitleOfHome"
    android:visibility="invisible"
    android:background="@color/colorWhite"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txGridTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="@color/color5e50b5"
        app:fontFamily="@string/roboto_medium"
        android:gravity="center"
        android:textSize="@dimen/_16sdp"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/top_albums" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txViewAll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/color5e50b5"
        app:fontFamily="@string/roboto_regular"
        android:gravity="center"
        android:textSize="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/view_all"
        android:drawableEnd="@drawable/ic_right_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txGridTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/view_all" />

</androidx.constraintlayout.widget.ConstraintLayout>
