<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:divider="@color/colorPrimaryDark"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toStartOf="@id/imageViewAdvanceSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryBackground="@null"
        app:queryHint="@string/search_song_album"
        app:showDividers="middle"
        app:voiceIcon="@drawable/ic_mic" />

    <ImageView
        android:id="@+id/imageViewAdvanceSearch"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_35sdp"
        android:padding="@dimen/_5ssp"
        android:src="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="@id/searchView"
        app:layout_constraintStart_toEndOf="@id/searchView"
        app:layout_constraintTop_toTopOf="@id/searchView" />

    <ImageView
        android:id="@+id/imageSearchMic"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_35sdp"
        android:padding="@dimen/_5ssp"
        android:src="@drawable/ic_mic"
        app:layout_constraintBottom_toBottomOf="@id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageViewAdvanceSearch"
        app:layout_constraintTop_toTopOf="@id/searchView" />

    <View
        android:layout_width="match_parent"
        android:layout_height=".3dp"
        android:layout_marginTop="@dimen/_2sdp"
        android:alpha=".2"
        android:background="@color/color_757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llRecentSearchResultContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txRecentSearchTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/recent_searches"
            android:textColor="@color/color5e50b5"
            android:textSize="@dimen/_12sdp"
            app:fontFamily="@string/roboto_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/recent_searches" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRecentSearches"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@android:color/white"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txRecentSearchTitle"
            tools:listitem="@layout/item_song" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txClearRecentSearches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/clear_all"
            android:textColor="@color/color5e50b5"
            android:textSize="@dimen/_10sdp"
            app:fontFamily="@string/roboto_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/clear_all" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llSearchResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutForMyFavorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabMode="fixed" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pagerForSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
